--- a/pi/apps/apps.yaml
+++ b/pi/apps/apps.yaml
@@ -11,5 +11,6 @@ mobilcz_grandma:
 cache_lunch:
   module: http_fetch
   class: HttpFetch
-  url: https://trnila.eu/lunch
+  url: https://trnila.eu/lunch.json
+  method: post
   when: 07:00:00
